--- a/src/main/resources/testfiles/output/blockstatements/attribute.html
+++ b/src/main/resources/testfiles/output/blockstatements/attribute.html
@@ -38,12 +38,12 @@
 &lt;div id=&quot;attr15&quot; data-seed-slider=&quot;false&quot;&gt;&lt;/div&gt;
 &lt;div id=&quot;attr16&quot; data-seed-slider=&quot;false&quot;&gt;&lt;/div&gt;
 &lt;div id=&quot;attr17&quot; data-seed-slider=&quot;false&quot;&gt;&lt;/div&gt;
-&lt;div id=&quot;attr18&quot; data-attr2=&quot;false&quot;&gt;&lt;/div&gt;
 &lt;div id=&quot;attr9&quot; title=&quot;&quot;&gt;&lt;/div&gt;
 &lt;div id=&quot;attr10&quot; title=&quot;&quot;&gt;&lt;/div&gt;
 &lt;div id=&quot;attr11&quot; title=&quot;&quot;&gt;&lt;/div&gt;
 &lt;div id=&quot;attr12&quot; title=&quot;&quot;&gt;&lt;/div&gt;
 &lt;div id=&quot;attr13&quot; class=&quot;foo&quot; data-number=&quot;2&quot; title=&quot;&quot;&gt;&lt;/div&gt;
+&lt;div id=&quot;attr18&quot; title=&quot;&quot; lang=&quot;${['']}&quot;&gt;&lt;/div&gt;
 </pre>
 
 <!-- test replacements -->
@@ -75,6 +75,8 @@
 <div id="attr11" title=""></div>
 <div id="attr12" title=""></div>
 <div id="attr13" lang="en" title="" class="foo" data-number="2"></div>
+<div id="attr18" title=""></div>
+<div id="attr19" title=""></div>
 
 <!-- test proper xss escaping -->
 <div id="rogue-attributes"><div></div></div>
