--- a/src/main/resources/testfiles/scripts/blockstatements/attribute/attribute.html
+++ b/src/main/resources/testfiles/scripts/blockstatements/attribute/attribute.html
@@ -75,6 +75,8 @@
 <div id="attr11" lang="en" data-sly-attribute.lang="" title=""></div>
 <div id="attr12" lang="en" data-sly-attribute.lang="${''}" title=""></div>
 <div id="attr13" lang="en" data-sly-attribute="${attrpojo.attributes}" title=""></div>
+<div id="attr18" title=""></div>
+<div id="attr19" title="${['']}"></div>
 
 <!-- test proper xss escaping -->
 <div id='rogue-attributes'><div data-sly-attribute="${attrpojo.rogueAttributes}"></div></div>
